public/stylesheets/master.css
/* @font-face kit by Fonts2u (http://www.fonts2u.com) */
@font-face {
  font-family:"Lucida Blackletter";
  src:url("/fonts/lucidaBlackletter/Aro.eot?") format("eot"),url("/fonts/lucidaBlackletter/Aro.woff") format("woff"),url("/fonts/lucidaBlackletter/Aro.ttf")
  format("truetype"),url("/fonts/lucidaBlackletter/Aro.svg#LucidaBlackletter")
  format("svg");font-weight:normal;font-style:normal;
}


body {
  /*font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;*/
  font-family: 'Titillium Web', sans-serif;
  font-size: 18px;
  /*background-color: #FFF;*/
  background: url('/images/forWelcome/cloud.jpeg') no-repeat center center fixed;
  background-size: 100% 100%;
}

a {
  color: #FFF;
  decoration: none;
}
a:hover{
  decoration: none;
  color: #FFF;
}
p{
  line-height: 1.8em;
}

.no-padding{
  padding: 0;
}

.navbar-ada{
  /*Main red color of adacode.io*/
  background-color: rgba(136,0,0,0.7);
  color: #FFF;
  border: none;
  border-radius: 0;
  border-bottom: 2px solid #FFF;
}
  .navbar-ada a{
    color: #FFF;
  }
  .navbar-ada h2{
    margin: 0;
    margin-top: -8px;
    margin-left: 30px;
  }
  .handwriting{
    font-family: "Lucida Blackletter", Helvetica, Arial, sans-serif;
  }
  .navbar-ada li{
    margin-left: 2em;
  }
  .navbar-ada button{
    margin-top: 0.5em;
    margin-right: 1em;
  }


  /*Bootstrap modified*/
  .navbar{
    margin-bottom: 0;
  }
  .navbar-inverse .navbar-nav>li>a{
    color: #FFF;
  }
  .navbar-inverse .navbar-nav>li:hover{
    background-color: #000;
  }
  .navbar-inverse .navbar-brand{
    color: #FFF;
  }

.content-body{
  margin-top: 3em;
}

.footer-ada{
  /*Main red color of adacode.io*/
  background-color: rgba(136,0,0,0.7);
  color: #FFF;
  border: none;
  border-radius: 0;
  padding-top : 2em;
  padding-bottom: 2em;
  border-top:  5px solid #FFF;
}
  .footer-ada a{
    color: #FFF;
  }
  .footer-ada h2{
    margin: 0;
    margin-top: -8px;
    margin-left: 0;
  }
  .footer-ada ul{
    list-style-type: none;
  }
  .footer-ada i{
    margin-left: 0.3em;
    margin-bottom: 0.3em;
  }
.social-network{
  margin-top: 0.5em;
  margin-left: 2em;
}
.partners img{
  height: 2.5em;
  width: 2.5em;
  margin: 0.5em;
  margin-top: 0.2em;
}
.footer-menu li{
  margin-top: 0.3em;
}

/*welcome Section*/
.welcomeBox-row-1{
  padding: 0;
  height: 8.5em;
}
.welcomeBox-row-2{
  padding: 0;
  height: 14.8em;
}
.black-light{
  opacity: 1;
}

.welcome-message{
  position: absolute;
  z-index: 1;
  margin-top: 3em;
  top:0;
  left:0;
  height: auto;
  width: 100%;
  background-color: rgba(0,0,0,0.7);
  color: #FFF;
  padding-top:11.1em;
}

/*want to learn section*/
.learn-tech{
  background: url('/images/forWelcome/space.jpeg') no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-color: #FFF;
  color: #FFF;
  padding:0;
  padding-top: 1em;
}
.box-tech{
  cursor: pointer;
  border-radius: 1em;
  margin-left: 5em;
  margin-bottom: 2em;
  padding: 0;
  background-color: rgba(255,255,255,0.3);
}
  .box-tech:hover{
    background-color: rgba(255,255,255,0.5);
  }

  .box-tech img{
    height: 9em;
  }
  .box-tect:hover{
    background-color: rgba(255,255,255,1);
  }


.head-tech{
  border-radius: 0.5em;
  color: #FFF;
  padding: 0.1em;
  margin-bottom: 1em;
}

.img-tech{
  padding: 0 0 1.5em 4.5em;
}


.my-green{
  background-color: #00C853;
}
.my-font-green{
  color: #00C853;
}
.my-blue{
  background-color: #0091EA;
}
.my-font-blue{
  color: #0091EA;
}
.my-red{
  background-color: #D50000;
}
.my-font-red{
  color: #D50000;
}
.my-yellow{
  background-color: #FFD600;
}
.my-font-yellow{
  color: #FFD600;
}
.my-purple{
  background-color: #6200EA;
}
.my-brown{
  background-color: #5D4037;
}

.cuz-modal{
  background-color: rgba(50,50,50,0.9);
  color: #FFF;
}


/*SPEAKER SECTION*/
.speaker{
  background-color: rgba(0,0,0,0.6);
  color: #FFF;
}
.profile{
  padding-left: 5em;
}
.profile-img{
  height: 13em;
  border: 5px solid rgba(136,0,0,0.4);
  margin-top: 1.5em;
}
  .profile-img:hover{
    border: 6px solid rgba(136,0,0,6);
  }
  .profile h2{
    margin-left: 0.5em;
  }

.p-black{
  background-color: rgba(0,0,0,0.4);
}

/*COURSES SECTION*/
.courses-header{
  background-color: rgba(136, 14, 79, 0.8);
  color: #FFF;
  margin-bottom: 0;
}

  .courses-header p{
    margin-left: 3.3em;
  }
  .courses-header a{
    margin-left: 3.3em;
  }

.courses-body{
  background-color: rgba(255,255,255,0.8);
  height: 100%;
  padding: 3em;
  padding-top: 2em;
  padding-bottom: 1em;
}
  .courses-body img{
    height: 9em;
    width: 19em;
  }
  .courses-body ul{
    list-style-type: lower-greek;
  }
.course-item{
  margin-bottom: 2em;
}

.course-full-item{
  margin-bottom: 2em;
}
  .course-full-item img{
    height: 23em;
    width: 100%;
  }


/*REGISTER SECTION*/
.form-register{
  padding: 5em;
  padding-top: 2em;
  background-color: rgba(0,0,0,0.7);
  color: #FFF;
}

/*THANK YOU SECTION*/
.thankyou{
  background-color: rgba(0,0,0,0.7);
  color: #FFF;
  margin-bottom: 0;
  padding: 2em;
  padding-top: 7em;
  padding-bottom: 7em;
}



/*xs-size*/
@media screen and (max-width: 768px) {
    .navbar-ada h2{
      margin: 0;
      margin-top: -8px;
      margin-left: 0.3em;
    }
    .welcome-message{
      position: absolute;
      z-index: 1;
      margin-top: 3em;
      top:0;
      left:0;
      height: auto;
      width: 100%;
      background-color: rgba(0,0,0,0.7);
      color: #FFF;
      padding-top: 0.5em;
      padding-left: 1em;
    }
      .welcome-message p{
        font-size: 14px;
      }
      .welcome-message h1{
        font-size: 28px;
      }
      .welcome-message button{
        font-size: 13px;
      }
    .welcomeBox-row-1{
      padding: 0;
      height: 4em;
    }
    .welcomeBox-row-2{
      padding: 0;
      height: 7em;
    }

    .box-tech{
      margin-left: 1.2em;
    }
    .box-tech img{
      height: 3em;
    }
    .head-tech h3{
      font-size: 15px;
    }
    .img-tech{
      padding-left: 0.7em;
    }

    .profile{
      padding-left: 2.5em;
    }

    .partners{
      margin-top: 2em;
      margin-left: 0em;
    }
      .partners a{
        margin-left: 0;
      }

    .social-network{
      margin-top: 2em;
      margin-left: 1em;
    }
      .social-network a{
        margin-left: 0;
      }

    /*Course Section*/
    .courses-header h1{
      font-size: 25px;
    }
      .courses-header p{
        margin-left: 2em;
      }
      .courses-header a{
        margin-left: 2em;
      }
    .courses-body{
      background-color: rgba(255,255,255,0.8);
      height: 100%;
      padding: 1em;
      padding-top: 2em;
      padding-bottom: 1em;
    }
      .courses-body img{
        height: 9em;
        width: 15em;
      }
    .course-item{
      margin-bottom: 2em;
    }

    .course-full-item{
      margin-bottom: 2em;
    }
      .course-full-item img{
        height: 13em;
        width: 100%;
      }

  /*Register*/
  .form-register{
    padding: 1em;
  }

  /*Thankyou*/
  .thankyou{
    padding-top: 2em;
    padding-bottom: 2em;
  }

}

